# Queen_Problem

./: Board.cpp  Board.hpp  CMakeLists.txt  Color.cpp  Color.hpp  Queen_Problem.cpp  README.md
.github/workflows/: codeql-analysis.yml
